# ready-to-code-ml

./: .gitignore  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
samples/jupyter-demo/: .gitignore  .jupytext.yml  README.md  pyproject.toml  setup.sh
samples/jupyter-demo/notebooks/: 00_basic_pandas.py  01_data_analysis.py
samples/jupyter-demo/src/: __init__.py  data_utils.py  notebook_creator.py
