[project]
name = "jupyter-demo"
version = "0.1.0"
description = "Demonstration of Jupyter notebooks with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
    "nbconvert>=7.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupytext>=1.17.2",
    "scipy>=1.16.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[project.optional-dependencies]
dev = ["papermill>=2.5.0", "nbdime>=4.0.0", "memory-profiler>=0.61.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/text_preprocessing"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
